# game-streamer-agent

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  deny.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent/src/: doctor.rs  factories.rs  main.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/capture-api/: Cargo.toml
crates/capture-api/src/: audio.rs  frame.rs  lib.rs  sink.rs  source.rs
crates/capture-macos/: Cargo.toml
crates/capture-macos/src/: imp.rs  lib.rs
crates/capture-windows/: Cargo.toml
crates/capture-windows/src/: audio.rs  capture.rs  device.rs  display.rs  frame.rs  imp.rs  lib.rs
crates/client-core/: Cargo.toml
crates/client-core/src/: audio.rs  decode.rs  lib.rs  reassembly.rs  stats.rs
crates/client-core/tests/: notifications.rs
crates/client-core/tests/common/: mod.rs
crates/client-dev/: Cargo.toml
crates/client-dev/src/: audio_playback.rs  decoder.rs  decoder_vt.rs  gamepad_capture.rs  headless.rs  input_capture.rs  main.rs  pairing.rs  window.rs
crates/client-ffi/: Cargo.toml
crates/client-ffi/src/: devlog.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  id.rs  lib.rs  media.rs  pattern.rs  time.rs
crates/decode-videotoolbox/: Cargo.toml
crates/decode-videotoolbox/src/: imp.rs  lib.rs
crates/encode-api/: Cargo.toml
crates/encode-api/src/: lib.rs
crates/encode-nvenc/: Cargo.toml
crates/encode-nvenc/src/: encoder.rs  lib.rs  nvml.rs  session.rs
crates/encode-nvenc/src/sys/: ffi.rs  mod.rs
crates/encode-nvenc/tests/: roundtrip.rs
crates/encode-sw/: Cargo.toml
crates/encode-sw/src/: convert.rs  lib.rs
crates/encode-videotoolbox/: Cargo.toml
crates/encode-videotoolbox/src/: imp.rs  lib.rs
crates/input/: Cargo.toml
crates/input/src/: keymap.rs  lib.rs  macos.rs  windows.rs
crates/input/src/windows/: mod.rs  vigem.rs
crates/protocol/: Cargo.toml
crates/protocol/fuzz/: Cargo.toml
crates/protocol/fuzz/fuzz_targets/: audio_datagram_parse.rs  control_decode.rs  datagram_parse.rs  pairing_decode.rs
crates/protocol/src/: control.rs  datagram.rs  fec.rs  grant.rs  input.rs  lib.rs  pairing.rs
crates/session/: Cargo.toml
crates/session/src/: abr.rs  admin.rs  audio_pipeline.rs  bwe_driver.rs  lib.rs  pairing.rs  pipeline.rs  service.rs  state.rs
crates/session/src/bwe/: acked_bitrate_estimator.rs  link_capacity_estimator.rs  loss_controller.rs  macros.rs  mod.rs  smoother.rs  time.rs  time_tricks.rs  types.rs
crates/session/src/bwe/alr_detector/: budget.rs  detector.rs
crates/session/src/bwe/delay/: arrival_group.rs  control.rs  rate_control.rs  trendline.rs
crates/session/src/bwe/probe/: cluster.rs  control.rs  estimator.rs  mod.rs
crates/session/tests/: abr_sim.rs  bwe_sweep.rs
crates/sources/: Cargo.toml
crates/sources/src/: lib.rs  test_pattern.rs
crates/transport/: Cargo.toml
crates/transport/src/: identity.rs  lib.rs  logsink.rs  pairing.rs  peers.rs  pinned.rs  stream.rs
xtask/: Cargo.toml
xtask/src/: logs.rs  main.rs  shaper.rs
