[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
license = "MIT OR Apache-2.0"
description = "Build/CI tooling for game-streamer-agent (invoked as `cargo xtask ...`)"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
