[package]
name = "gsa-audio"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
license = "MIT OR Apache-2.0"
description = "Opus audio codec (encode/decode) for game-streamer-agent"

[dependencies]
gsa-core = { workspace = true }
opusic-c = "1.6"
bytemuck = "1"
tracing = { workspace = true }

[lints]
workspace = true
