[package]
name = "gsa-capture-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
license = "AGPL-3.0-only"
description = "RenderSource / FrameSink / GpuFrame contracts for game-streamer-agent capture backends"

[dependencies]
gsa-core = { workspace = true }
gsa-protocol = { workspace = true }

[lints]
workspace = true
