[package]
name = "gsa-capture-macos"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
license = "AGPL-3.0-only"
description = "macOS ScreenCaptureKit capture backend for game-streamer-agent"

[dependencies]
gsa-core = { workspace = true }
gsa-capture-api = { workspace = true }
gsa-protocol = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true, features = ["NSArray", "NSError", "NSString"] }
objc2-screen-capture-kit = { workspace = true, features = ["SCShareableContent", "SCStream", "block2"] }
objc2-core-foundation = { workspace = true }
objc2-core-media = { workspace = true, features = ["CMSampleBuffer", "CMTime", "CMBase", "CMBlockBuffer", "objc2-core-audio-types"] }
objc2-core-audio-types = "0.3"
objc2-core-video = { workspace = true, features = ["CVBuffer", "CVImageBuffer", "CVPixelBuffer", "CVPixelBufferIOSurface"] }
objc2-core-graphics = { workspace = true, features = ["CGDirectDisplay", "CGWindow"] }
objc2-io-surface = { workspace = true, features = ["IOSurfaceRef"] }
dispatch2 = { workspace = true }
block2 = { workspace = true }

# FFI crate: opts out of the workspace-wide `unsafe_code = "forbid"` by
# declaring its own lint table. Unsafe is permitted but every block must
# carry a // SAFETY comment (undocumented_unsafe_blocks = deny).
[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
