[package]
name = "gsa-capture-windows"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
license = "AGPL-3.0-only"
description = "Windows Graphics Capture backend for game-streamer-agent"

[dependencies]
gsa-core = { workspace = true }
gsa-capture-api = { workspace = true }
gsa-protocol = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    # IMMDevice::Activate takes a PROPVARIANT, so the audio features drag in
    # the structured-storage and variant modules even though we pass None.
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_HiDpi",
] }

# FFI crate: opts out of the workspace-wide `unsafe_code = "forbid"` by
# declaring its own lint table. Unsafe is permitted but every block must
# carry a // SAFETY comment (undocumented_unsafe_blocks = deny).
[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
