[package]
name = "gsa-client-dev"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
license = "MIT OR Apache-2.0"
description = "Developer debug client for game-streamer-agent: headless stats mode and windowed presentation"

[[bin]]
name = "gsa-client-dev"
path = "src/main.rs"

[dependencies]
gsa-core = { workspace = true }
gsa-protocol = { workspace = true }
gsa-client-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
openh264 = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
cpal = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = { workspace = true, features = ["CFNumber", "CFDictionary", "CFString"] }
objc2-core-media = { workspace = true, features = ["CMSampleBuffer", "CMTime", "CMFormatDescription", "CMBlockBuffer"] }
objc2-core-video = { workspace = true, features = ["CVBuffer", "CVImageBuffer", "CVPixelBuffer", "CVReturn"] }
objc2-video-toolbox = { workspace = true, features = ["VTDecompressionSession", "VTDecompressionProperties", "VTSession", "VTErrors", "objc2-core-media", "block2"] }
block2 = { workspace = true }

# Hosts the VideoToolbox decoder FFI (decoder_vt.rs): opts out of the
# workspace-wide `unsafe_code = "forbid"`; unsafe blocks must carry SAFETY
# comments (undocumented_unsafe_blocks = deny).
[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
