[package]
name = "gsa-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
license = "MIT OR Apache-2.0"
description = "Shared types for the game-streamer-agent workspace: ids, time, errors, config, media enums"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
