[package]
name = "gsa-encode-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
license = "AGPL-3.0-only"
description = "Encoder trait and low-latency contract for game-streamer-agent encode backends"

[dependencies]
gsa-core = { workspace = true }
gsa-capture-api = { workspace = true }
bytes = { workspace = true }

[lints]
workspace = true
