[package]
name = "gsa-encode-sw"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
license = "AGPL-3.0-only"
description = "Software H.264 encoder backend (openh264) for game-streamer-agent — debug/CI only (spec 03)"

[dependencies]
gsa-core = { workspace = true }
gsa-capture-api = { workspace = true }
gsa-encode-api = { workspace = true }
bytes = { workspace = true }
openh264 = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
