[package]
name = "gsa-encode-videotoolbox"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
license = "AGPL-3.0-only"
description = "macOS VideoToolbox hardware encoder backend for game-streamer-agent"

[dependencies]
gsa-core = { workspace = true }
gsa-capture-api = { workspace = true }
gsa-encode-api = { workspace = true }
gsa-capture-macos = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-core-foundation = { workspace = true, features = ["CFNumber", "CFDictionary", "CFString"] }
objc2-core-media = { workspace = true, features = ["CMSampleBuffer", "CMTime", "CMFormatDescription", "CMBlockBuffer"] }
objc2-core-video = { workspace = true, features = ["CVBuffer", "CVImageBuffer", "CVPixelBuffer"] }
objc2-video-toolbox = { workspace = true, features = ["VTCompressionSession", "VTCompressionProperties", "VTSession", "VTErrors", "objc2-core-media", "block2"] }
objc2-io-surface = { workspace = true, features = ["IOSurfaceRef"] }
block2 = { workspace = true }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
