[package]
name = "gsa-input"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
license = "AGPL-3.0-only"
description = "OS input injection for game-streamer-agent (keyboard/mouse/gamepad)"

[dependencies]
gsa-core = { workspace = true }
gsa-protocol = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-graphics = { workspace = true, features = ["CGEvent", "CGEventTypes", "CGEventSource", "CGDirectDisplay", "CGRemoteOperation"] }
objc2-core-foundation = { workspace = true, features = ["CFCGTypes"] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
vigem-client = "0.1.4"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
