[package]
name = "gsa-protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
license = "MIT OR Apache-2.0"
description = "Wire protocol for game-streamer-agent: control messages, datagram framing, versioning"

[dependencies]
gsa-core = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
bytes = { workspace = true }

[lints]
workspace = true
