[package]
name = "gsa-transport"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
license = "MIT OR Apache-2.0"
description = "QUIC transport for game-streamer-agent: endpoints, channel mapping, control-message framing"

[dependencies]
gsa-core = { workspace = true }
gsa-protocol = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
socket2 = "0.6"

[lints]
workspace = true
